--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<div id="cybertruck"></div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Cybertruck on the web</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div id="cybertruck"></div>
+    </body>
+</html>
